# CausalInferance

./: SampleDocumention.md  bib.cite  comparison_indepenence_methods.ipynb  notes.md  playground.ipynb  pyproject.toml  requirements.txt
CausalInferance/: methods.py  multi_variant_inferance.py  registry_utils.py  xicor.py
CausalInferance/inferance_test/: base_class.py  information_geometric_causal_inferance.py
CausalInferance/multi_variant_inference/: multi_variant_inferance.py
causalinferance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_independance.py
